--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.frontendmentor.io/profile/fa7eh"">Fatehbir Singh</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/fa7eh">Fatehbir Singh</a>.
   </div>
 </body>
 
