--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
       </div>
     </section>
   </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.frontendmentor.io/profile/fa7eh">Fatehbir Singh</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/fa7eh">Fatehbir Singh</a>.
+    </div>
+  </footer>
 </body>
 
 </html>
